# KeyLife

./: .gitignore  CLAUDE.md  LICENSE  README.md  installer.iss  pyproject.toml  run.py  run.spec
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_per_app_tracking.py
backend/app/: __init__.py  __main__.py
backend/app/aggregator/: buffer.py
backend/app/api/: routes.py  schemas.py  server.py
backend/app/core/: config.py  paths.py
backend/app/hook/: events.py  foreground.py  icons.py  vk_codes.py  win_hook.py
backend/app/service/: daemon.py
backend/app/storage/: encryption.py  models.py  repository.py  session.py
backend/app/ui/: monitor.py
backend/app/ui/qt/: autostart.py  key_display.py  main_window.py  settings_page.py  stats_page.py  style.py  ui_state.py  win_chrome.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.vue  api.ts  main.ts  nav-progress.ts  router.ts  style.css  types.ts
frontend/src/components/: AppShell.vue  ChartBox.vue  DateRangePicker.vue  StatCard.vue
frontend/src/stores/: handmap.ts  range.ts
frontend/src/views/: AppsView.vue  CalendarView.vue  DashboardView.vue  HourlyView.vue  KeyboardView.vue  SettingsView.vue
tools/: make_icons.py
