[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "keylife"
version = "0.3.0"
description = "Personal keyboard usage tracker for Windows — privacy-preserving aggregate statistics"
requires-python = ">=3.11"
authors = [{ name = "ArcademMan" }]
dependencies = [
    "SQLAlchemy>=2.0",
    "alembic>=1.13",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "PySide6>=6.6",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]

[project.scripts]
keylife = "app.__main__:main"
keylife-monitor = "app.ui.monitor:main"
keylife-ui = "app.ui.qt.main_window:main"
keylife-serve = "app.api.server:run"

[tool.setuptools.packages.find]
where = ["backend"]
include = ["app*"]
